--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,3 @@
 ---
 roles:
-  - name: ansible-thoteam.nexus3-oss
-    src: https://github.com/thiagoalessio/ansible-role-nexus3-oss.git
-    version: master
+  - name: ansible-ThoTeam.nexus3-oss
