--- a/nexus-playbook.yml
+++ b/nexus-playbook.yml
@@ -7,7 +7,7 @@
     - role: ansible-ThoTeam.nexus3-oss
 
   vars:
-    nexus_version: "3.68.1-01"
+    nexus_version: "3.79.1"
     nexus_admin_password: "MyStrongPassword"
     nexus_blob_stores:
       - name: default
