--- a/nexus-playbook.yml
+++ b/nexus-playbook.yml
@@ -7,6 +7,7 @@
     - role: ansible-ThoTeam.nexus3-oss
 
   vars:
+    nexus_download_url: "https://download.sonatype.com/nexus/3/nexus-3.79.1-04-linux-x86_64.tar.gz"
     nexus_version: "3.79.1-04"
     nexus_admin_password: "MyStrongPassword"
     nexus_blob_stores:
