--- a/nexus-playbook.yml
+++ b/nexus-playbook.yml
@@ -8,6 +8,8 @@
 
   vars:
     nexus_version: "3.79.1-04"
+    nexus_download_url: "https://download.sonatype.com/nexus/3"
+    nexus_package_format: "linux-x86_64"
     nexus_admin_password: "MyStrongPassword"
     nexus_blob_stores:
       - name: default
