--- a/nexus-playbook.yml
+++ b/nexus-playbook.yml
@@ -4,7 +4,7 @@
   become: true
 
   roles:
-    - role: ansible-ThoTeam.nexus3-oss
+    - role: roles/nexus3-oss
 
   vars:
     nexus_version: "3.79.1-04"
