--- a/nexus-playbook.yml
+++ b/nexus-playbook.yml
@@ -3,8 +3,15 @@
   hosts: all
   become: true
 
-  roles:
-    - role: roles/nexus3-oss
+  tasks:
+    - name: Install community.general collection
+      ansible.builtin.ansible_galaxy:
+        name: community.general
+        state: present
+
+    - name: Install Nexus Repository
+      include_role:
+        name: roles/nexus3-oss
 
   vars:
     nexus_version: "3.79.1-04"
